Done with setup writeup

--- a/cs180/hamburger.html
+++ b/cs180/hamburger.html
@@ -11,4 +11,5 @@
     <a href="/cs180/proj2/">Project 2</a>
     <a href="/cs180/proj3/">Project 3</a>
     <a href="/cs180/proj4/">Project 4</a>
+    <a href="/cs180/proj5/">Project 5</a>
 </div>
