Almost done with section 7

--- a/cs180/proj5/index.html
+++ b/cs180/proj5/index.html
@@ -513,6 +513,108 @@
         </div>
 
         <br>
+        <div class="bounding-box">
+            <h3 align="middle">
+                Editing Hand-Drawn and Web Images
+            </h3>
+            <p>
+                I decided to try out the same approach above but on nonrealistic images. One of them was downloaded from the internet while the other two are hand-drawn images. Here are the results:
+            </p>
+            <table>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_1.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=1</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_3.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=3</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_5.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=5</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_7.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=7</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_10.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=10</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger_20.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=20</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/tiger.png" align="middle" width="400px" />
+                        <figcaption>Original</figcaption>
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/5a/Edits/dog_1.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=1</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog_3.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=3</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog_5.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=5</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog_7.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=7</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog_10.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=10</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog_20.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=20</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/dog.png" align="middle" width="400px" />
+                        <figcaption>Original</figcaption>
+                    </td>
+                </tr>
+                <tr align="center">
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_1.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=1</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_3.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=3</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_5.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=5</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_7.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=7</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_10.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=10</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon_20.png" align="middle" width="400px" />
+                        <figcaption><code class="highlighter-rouge">i_start=20</code></figcaption>
+                    </td>
+                    <td>
+                        <img src="./Images/5a/Edits/watermelon.png" align="middle" width="400px" />
+                        <figcaption>Original</figcaption>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+        <br>
         <br>
 
         <h1 align="middle"><a href="#4b">Project 4B:Feature Matching for Auto-Stitching</a>
